/*
 * $Id: ChangeLog,v 1.5447 2007/04/16 03:44:07 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-04-16 12:25 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/browse.prg
    ! fixed to go bottom record as reported in comp.lang.xharbour news.

  * hrbdll.bc
    + added tscalar.prg

2007-04-15 23:42 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbpp.h
  * source/compiler/ppcomp.c
  * source/pp/ppcore.c
    + Added support for #pragma push ... and #pragma pop ...
      /* This allows save, modify, and later restore of any compiler switch */

  * include/wintypes.ch
    + Added #pragma push -w0, #pragma pop -w around overloaded #define int and INT to supress overloaded warnings

2007-04-15 17:55 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/cstr.prg
    * Object representation of ValToPrg() to be compilable

2007-04-15 15:09 UTC-0700 Andres Reyes <andresreyes_mzt/at/yahoo.com.mx>
  * makefile.bc
    * fixed missing file clpclass.prg

2007-04-15 16:11 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * hrbdll.bc
  * hrbdll.gc
  * hrbdll.pc
  * hrbdll.vc
  * hrbdll.wc
     * Added clpclass.prg and tscalar.prg

2007-04-15 15:58 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/tobject.prg
  * source/rtl/tscalar.prg
    * Corrected static HB_FUNC( ... ) to HB_FUNC_STATIC( ... )

2007-04-15 12:36 UTC-0700 Andres Reyes <andresreyes_mzt/at/yahoo.com.mx>
  * source/rtl/tclass.prg
     * minor change for future implementation
     * move __CLASSNEW, __CLASSADD, __CLASSINS to clpclass.prg
        * this file only be linked if it's necesary
     * move Scalar Classes to tscalar.prg
        * this file only be linked if it's necesary
   + source/rtl/clpclass.prg
   + source/rtl/tscalar.prg
     + Add POINTER:FUNCNAME()
        * retrieves the function name of pointer