@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5447 2007/04/16 03:44:07 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5448 2007/04/16 15:33:14 modalsist Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-04-16 13:02 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
+  * include/simplex.c
+  * source/pp/ppcore.c
+    * Compiler warnings
 
 2007-04-16 12:25 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
   * source/rtl/browse.prg
